Build request body with Thymeleaf