@@ -1,6 +1,5 @@
 package net.petrikainulainen.springmvctest.junit5.web;
 
-import net.petrikainulainen.springmvctest.junit5.todo.CreateTodoItemDTO;
 import net.petrikainulainen.springmvctest.junit5.todo.TagDTO;
 import net.petrikainulainen.springmvctest.junit5.todo.TodoItemCrudService;
 import net.petrikainulainen.springmvctest.junit5.todo.TodoItemDTO;
@@ -15,8 +14,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.*;
 
 import static net.petrikainulainen.springmvctest.junit5.web.WebTestConfig.objectMapperHttpMessageConverter;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -58,8 +56,6 @@ class TodoItemCrudControllerTest {
         private static final int MAX_LENGTH_DESCRIPTION = 1000;
         private static final int MAX_LENGTH_TITLE = 100;
 
-        private CreateTodoItemDTO input;
-
         @Nested
         @DisplayName("When the information of the created todo item isn't valid")
         class WhenInvalidInformationIsProvided {
@@ -72,36 +68,39 @@ class TodoItemCrudControllerTest {
             @DisplayName("When the field values are missing")
             class WhenFieldValuesAreMissing {
 
-                @BeforeEach
-                void CreateInputWithMissingFieldValues() {
-                    input = new CreateTodoItemDTO();
-                }
-
                 @Test
                 @DisplayName("Should return the HTTP status code bad request (400)")
                 void shouldReturnHttpStatusCodeBadRequest() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.EMPTY_TODO_ITEM,
+                                    Collections.emptyMap()
+                            )
                             .andExpect(status().isBadRequest());
                 }
 
                 @Test
                 @DisplayName("Should return validation errors as JSON")
                 void shouldReturnValidationErrorsAsJson() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.EMPTY_TODO_ITEM,
+                                    Collections.emptyMap()
+                            )
                             .andExpect(content().contentType(MediaType.APPLICATION_JSON));
                 }
 
                 @Test
                 @DisplayName("Should return one validation error")
                 void shouldReturnOneValidationError() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.EMPTY_TODO_ITEM,
+                                    Collections.emptyMap()
+                            )
                             .andExpect(jsonPath("$.fieldErrors", hasSize(1)));
                 }
 
                 @Test
                 @DisplayName("Should return a validation error about missing title")
                 void shouldReturnValidationErrorAboutMissingTitle() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.EMPTY_TODO_ITEM,
+                                    Collections.emptyMap()
+                            )
                             .andExpect(jsonPath(
                                     "$.fieldErrors[?(@.field == 'title')].errorCode",
                                     contains(VALIDATION_ERROR_CODE_MISSING_VALUE)
@@ -111,7 +110,9 @@ class TodoItemCrudControllerTest {
                 @Test
                 @DisplayName("Shouldn't create a new todo item")
                 void shouldNotCreateNewTodoItem() throws Exception {
-                    requestBuilder.create(input);
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.EMPTY_TODO_ITEM,
+                            Collections.emptyMap()
+                    );
 
                     verify(service, never()).create(any());
                 }
@@ -121,38 +122,46 @@ class TodoItemCrudControllerTest {
             @DisplayName("When the field values are empty strings")
             class WhenFieldValuesAreEmptyStrings {
 
-                @BeforeEach
-                void createInputWithEmptyFieldValues() {
-                    input = new CreateTodoItemDTO();
-                    input.setDescription("");
-                    input.setTitle("");
-                }
+                private final Map<String, Object> TEMPLATE_VARIABLES = Map.of(
+                        TodoItemRequestBuilder.TEMPLATE_VARIABLE_DESCRIPTION,
+                        "",
+                        TodoItemRequestBuilder.TEMPLATE_VARIABLE_TITLE,
+                        ""
+                );
 
                 @Test
                 @DisplayName("Should return the HTTP status code bad request (400)")
                 void shouldReturnHttpStatusCodeBadRequest() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(status().isBadRequest());
                 }
 
                 @Test
                 @DisplayName("Should return validation errors as JSON")
                 void shouldReturnValidationErrorsAsJson() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(content().contentType(MediaType.APPLICATION_JSON));
                 }
 
                 @Test
                 @DisplayName("Should return one validation error")
                 void shouldReturnOneValidationError() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(jsonPath("$.fieldErrors", hasSize(1)));
                 }
 
                 @Test
                 @DisplayName("Should return a validation error about empty title")
                 void shouldReturnValidationErrorAboutEmptyTitle() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(jsonPath(
                                     "$.fieldErrors[?(@.field == 'title')].errorCode",
                                     contains(VALIDATION_ERROR_CODE_EMPTY_VALUE)
@@ -162,7 +171,9 @@ class TodoItemCrudControllerTest {
                 @Test
                 @DisplayName("Shouldn't create a new todo item")
                 void shouldNotCreateNewTodoItem() throws Exception {
-                    requestBuilder.create(input);
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                            TEMPLATE_VARIABLES
+                    );
 
                     verify(service, never()).create(any());
                 }
@@ -172,38 +183,46 @@ class TodoItemCrudControllerTest {
             @DisplayName("When the field values contain only whitespace characters")
             class WhenFieldValuesContainOnlyWhitespaceCharacters {
 
-                @BeforeEach
-                void createInputWithEmptyFieldValues() {
-                    input = new CreateTodoItemDTO();
-                    input.setDescription("      ");
-                    input.setTitle("            ");
-                }
+                private final Map<String, Object> TEMPLATE_VARIABLES = Map.of(
+                        TodoItemRequestBuilder.TEMPLATE_VARIABLE_DESCRIPTION,
+                        "      ",
+                        TodoItemRequestBuilder.TEMPLATE_VARIABLE_TITLE,
+                        "            "
+                );
 
                 @Test
                 @DisplayName("Should return the HTTP status code bad request (400)")
                 void shouldReturnHttpStatusCodeBadRequest() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(status().isBadRequest());
                 }
 
                 @Test
                 @DisplayName("Should return validation errors as JSON")
                 void shouldReturnValidationErrorsAsJson() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(content().contentType(MediaType.APPLICATION_JSON));
                 }
 
                 @Test
                 @DisplayName("Should return one validation error")
                 void shouldReturnOneValidationError() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(jsonPath("$.fieldErrors", hasSize(1)));
                 }
 
                 @Test
                 @DisplayName("Should return a validation error about empty title")
                 void shouldReturnValidationErrorAboutEmptyTitle() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(jsonPath(
                                     "$.fieldErrors[?(@.field == 'title')].errorCode",
                                     contains(VALIDATION_ERROR_CODE_EMPTY_VALUE)
@@ -213,7 +232,9 @@ class TodoItemCrudControllerTest {
                 @Test
                 @DisplayName("Shouldn't create a new todo item")
                 void shouldNotCreateNewTodoItem() throws Exception {
-                    requestBuilder.create(input);
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                            TEMPLATE_VARIABLES
+                    );
 
                     verify(service, never()).create(any());
                 }
@@ -223,38 +244,47 @@ class TodoItemCrudControllerTest {
             @DisplayName("When the field values are too long")
             class WhenFieldValuesAreTooLong {
 
-                @BeforeEach
-                void createInputWithTooLongFieldValues() {
-                    input = new CreateTodoItemDTO();
-                    input.setDescription(WebTestUtil.createStringWithLength(MAX_LENGTH_DESCRIPTION + 1));
-                    input.setTitle(WebTestUtil.createStringWithLength(MAX_LENGTH_TITLE + 1));
-                }
+
+                private final Map<String, Object> TEMPLATE_VARIABLES = Map.of(
+                        TodoItemRequestBuilder.TEMPLATE_VARIABLE_DESCRIPTION,
+                        WebTestUtil.createStringWithLength(MAX_LENGTH_DESCRIPTION + 1),
+                        TodoItemRequestBuilder.TEMPLATE_VARIABLE_TITLE,
+                        WebTestUtil.createStringWithLength(MAX_LENGTH_TITLE + 1)
+                );
 
                 @Test
                 @DisplayName("Should return the HTTP status code bad request (400)")
                 void shouldReturnHttpStatusCodeBadRequest() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(status().isBadRequest());
                 }
 
                 @Test
                 @DisplayName("Should return validation errors as JSON")
                 void shouldReturnValidationErrorsAsJson() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(content().contentType(MediaType.APPLICATION_JSON));
                 }
 
                 @Test
                 @DisplayName("Should return two validation error")
                 void shouldReturnTwoValidationErrors() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(jsonPath("$.fieldErrors", hasSize(2)));
                 }
 
                 @Test
                 @DisplayName("Should return a validation error about too long description")
                 void shouldReturnValidationErrorAboutTooLongDescription() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(jsonPath(
                                     "$.fieldErrors[?(@.field == 'description')].errorCode",
                                     contains(VALIDATION_ERROR_CODE_TOO_LONG_VALUE)
@@ -264,7 +294,9 @@ class TodoItemCrudControllerTest {
                 @Test
                 @DisplayName("Should return a validation error about too long title")
                 void shouldReturnValidationErrorAboutTooLongTitle() throws Exception {
-                    requestBuilder.create(input)
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                    TEMPLATE_VARIABLES
+                            )
                             .andExpect(jsonPath(
                                     "$.fieldErrors[?(@.field == 'title')].errorCode",
                                     contains(VALIDATION_ERROR_CODE_TOO_LONG_VALUE)
@@ -274,7 +306,9 @@ class TodoItemCrudControllerTest {
                 @Test
                 @DisplayName("Shouldn't create a new todo item")
                 void shouldNotCreateNewTodoItem() throws Exception {
-                    requestBuilder.create(input);
+                    requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                            TEMPLATE_VARIABLES
+                    );
 
                     verify(service, never()).create(any());
                 }
@@ -289,20 +323,15 @@ class TodoItemCrudControllerTest {
             private final Long ID = 1L;
             private final String TITLE = WebTestUtil.createStringWithLength(MAX_LENGTH_TITLE);
 
+            private final Map<String, Object> TEMPLATE_VARIABLES = Map.of(
+                    TodoItemRequestBuilder.TEMPLATE_VARIABLE_DESCRIPTION,
+                    DESCRIPTION,
+                    TodoItemRequestBuilder.TEMPLATE_VARIABLE_TITLE,
+                    TITLE
+            );
+
             @BeforeEach
-            void configureSystemUnderTest() {
-                input = createInputWithValidInformation();
-                returnCreatedTodoItem();
-            }
-
-            private CreateTodoItemDTO createInputWithValidInformation() {
-                CreateTodoItemDTO input = new CreateTodoItemDTO();
-                input.setDescription(DESCRIPTION);
-                input.setTitle(TITLE);
-                return input;
-            }
-
-            private void returnCreatedTodoItem() {
+            void returnCreatedTodoItem() {
                 TodoItemDTO created = new TodoItemDTO();
                 created.setId(ID);
                 created.setDescription(DESCRIPTION);
@@ -316,21 +345,27 @@ class TodoItemCrudControllerTest {
             @Test
             @DisplayName("Should return the HTTP status status code created (201)")
             void shouldReturnHttpStatusCodeCreated() throws Exception {
-                requestBuilder.create(input)
+                requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                TEMPLATE_VARIABLES
+                        )
                         .andExpect(status().isCreated());
             }
 
             @Test
             @DisplayName("Should return the information of the created todo item as JSON")
             void shouldReturnInformationOfCreatedTodoItemAsJSON() throws Exception {
-                requestBuilder.create(input)
+                requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                TEMPLATE_VARIABLES
+                        )
                         .andExpect(content().contentType(MediaType.APPLICATION_JSON));
             }
 
             @Test
             @DisplayName("Should return the information of the created todo item")
             void shouldReturnInformationOfCreatedTodoItem() throws Exception {
-                requestBuilder.create(input)
+                requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                                TEMPLATE_VARIABLES
+                        )
                         .andExpect(jsonPath("$.id", equalTo(ID.intValue())))
                         .andExpect(jsonPath("$.description", equalTo(DESCRIPTION)))
                         .andExpect(jsonPath("$.status", equalTo(TodoItemStatus.OPEN.name())))
@@ -341,7 +376,9 @@ class TodoItemCrudControllerTest {
             @Test
             @DisplayName("Should create a new todo item with the correct description")
             void shouldCreateNewTodoItemWithCorrectDescription() throws Exception {
-                requestBuilder.create(input);
+                requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                        TEMPLATE_VARIABLES
+                );
                 verify(service, times(1)).create(assertArg(
                         created -> assertThat(created.getDescription()).isEqualTo(DESCRIPTION)
                 ));
@@ -350,7 +387,9 @@ class TodoItemCrudControllerTest {
             @Test
             @DisplayName("Should create a new todo item with the correct title")
             void shouldCreateNewTodoItemWithCorrectTitle() throws Exception {
-                requestBuilder.create(input);
+                requestBuilder.create(TodoItemRequestBuilder.CreateRequestBodyTemplate.TODO_ITEM,
+                        TEMPLATE_VARIABLES
+                );
                 verify(service, times(1)).create(assertArg(
                         created -> assertThat(created.getTitle()).isEqualTo(TITLE)
                 ));
@@ -498,7 +537,7 @@ class TodoItemCrudControllerTest {
                 TagDTO tag = new TagDTO();
                 tag.setId(TAG_ID);
                 tag.setName(TAG_NAME);
-                found.setTags(Arrays.asList(tag));
+                found.setTags(List.of(tag));
 
                 given(service.findById(TODO_ITEM_ID)).willReturn(found);
             }
